docs: finalize elite tier HFT architecture documentation